--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 __pycache__/config.cpython-39.pyc
 *.csv
 *.csv
+draft_documents/draft_LSTM.ipynb
+draft_documents/draft_plot_ticker_price_candlelight_visualisation.ipynb
+draft_documents/test_scarpe_historical_data.ipynb
+draft_documents/twitter_recent_search.ipynb
