Updates on config file and API keys for cryptocompare

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ draft_documents/draft_LSTM.ipynb
 draft_documents/draft_plot_ticker_price_candlelight_visualisation.ipynb
 draft_documents/test_scarpe_historical_data.ipynb
 draft_documents/twitter_recent_search.ipynb
+config.py
