--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ draft_documents/draft_plot_ticker_price_candlelight_visualisation.ipynb
 draft_documents/test_scarpe_historical_data.ipynb
 draft_documents/twitter_recent_search.ipynb
 config.py
+backup_code(25.03.2022).zip
+market_prediction.zip
