--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ draft_documents/twitter_recent_search.ipynb
 config.py
 backup_code(25.03.2022).zip
 market_prediction.zip
+market-price_data.zip
+twitter_data.zip
