Update final names

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ backup_code(25.03.2022).zip
 market_prediction.zip
 market-price_data.zip
 twitter_data.zip
+VS-test_6_LSTM_prediction_BTC_price.ipynb
+VS-test_6_LSTM_prediction_BTC_price.ipynb
