Updates on the formatting and location of files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ market-price_data.zip
 twitter_data.zip
 VS-test_6_LSTM_prediction_BTC_price.ipynb
 VS-test_6_LSTM_prediction_BTC_price.ipynb
+VScode-test_6_LSTM_prediction_BTC_price.ipynb
